ensure mobile gets small image sizes (from mb to kb)

--- a/src/pages/blog/using-mdx.mdx
+++ b/src/pages/blog/using-mdx.mdx
@@ -3,8 +3,10 @@ layout: '../../layouts/BlogPost.astro'
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 'Jul 02 2022'
-heroImage: '/images/sky.jpg'
-alt: "A red sky"
+heroImage: '/images/snow/snow-small.jpg'
+alt: 'Trees layered with snow'
+srcset: '/images/snow/snow-small.jpg 640w,
+/images/snow/snow-large.jpg 1920w'
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
